# devme

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  devme.toml  install.sh  justfile
.claude/commands/: release.md
.github/workflows/: release.yml
completions/: _devme  devme.bash  devme.fish  devme.ps1
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  remote.rs  skill.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/config/: Cargo.toml
crates/config/skill/: SKILL.md
crates/config/src/: browser.rs  docker.rs  env_var.rs  error.rs  global.rs  graph.rs  interpolate.rs  lib.rs  paths.rs  provision.rs  remote.rs  service.rs  skill.rs  stack.rs  step.rs  surgical.rs  validate.rs
crates/core/: Cargo.toml
crates/core/src/: dep.rs  health.rs  ipc.rs  lib.rs  port.rs  restart.rs  scope.rs  slot.rs  state.rs  trust.rs  wizard.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: codec.rs  framing.rs  lib.rs
crates/shared-supervisor/: Cargo.toml
crates/shared-supervisor/src/: main.rs
crates/shared-supervisor/tests/: integration.rs
crates/slot-allocator/: Cargo.toml
crates/slot-allocator/src/: allocator.rs  error.rs  lib.rs  liveness.rs  record.rs
crates/supervisor/: Cargo.toml
crates/supervisor/src/: daemon.rs  env_resolve.rs  health.rs  lib.rs  logstore.rs  main.rs  port_preflight.rs  preflight.rs  process.rs  prompt.rs  spawn.rs
crates/tui/: Cargo.toml
crates/tui/examples/: preview.rs
crates/tui/src/: discovery.rs  event_loop.rs  keymap.rs  lib.rs  main.rs  render.rs  state.rs  theme.rs  worktree.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
docs/: PRD.md
docs/adr/: 0000-template.md  0001-unified-step-service-graph.md  0002-prompt-by-default-consent.md  0003-daemon-per-instance-lifecycle.md  0004-cli-skill-agent-surface.md  0005-override-aware-failure-model.md  0006-stdlib-file-locks.md  0007-two-tier-daemon.md  0008-cli-tui-conventions.md  0009-cargo-dist-distribution.md  0010-tui-layout.md  0011-first-run-wizard.md  0012-readme-template-system.md  0013-monorepo-awareness.md  0014-cloud-relay.md  0014-declarative-env-vars.md  0015-skill-install-hints.md  0016-converge-only-worktrees.md  0017-unified-output-layer.md
examples/: README.md
examples/interp-envfile/: devme.toml
examples/shared/backend/: devme.toml
examples/shared/frontend/: devme.toml
examples/smoke/: devme.toml
examples/web-app/: devme.toml
scripts/: candidates.txt  candidates2.txt  candidates3.txt  candidates4.txt  logs-smoke.sh  name-check.ts  skill-modal-smoke.sh  tui-smoke.sh
