[package]
name = "devstack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "devstack_cli"
path = "src/lib.rs"

[[bin]]
name = "devstack"
path = "src/main.rs"

[dependencies]
devstack-core = { workspace = true }
devstack-config = { workspace = true }
devstack-client = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
