[package]
name = "devme"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "devme_cli"
path = "src/lib.rs"

[[bin]]
name = "devme"
path = "src/main.rs"

[dependencies]
devme-core = { workspace = true }
devme-config = { workspace = true }
devme-client = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
