[package]
name = "devstack-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
devstack-core = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
