[package]
name = "devme-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
devme-core = { workspace = true }
indexmap = { version = "2", features = ["serde"] }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
