[package]
name = "devme-shared-supervisor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "devme-shared-supervisor"
path = "src/main.rs"

[dependencies]
devme-core = { workspace = true }
devme-config = { workspace = true }
tokio = { workspace = true }
portable-pty = { workspace = true }
process_alive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
