[package]
name = "devme-shared-supervisor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "devme-shared-supervisor"
path = "src/main.rs"

[dependencies]
devme-core = { workspace = true }
devme-config = { workspace = true }
devme-ipc = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = { version = "0.3", features = ["sink"] }
portable-pty = { workspace = true }
process_alive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
devme-client = { workspace = true }
