[package]
name = "devstack-slot-allocator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
devstack-core = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
process_alive = { workspace = true }
tempfile = { workspace = true }
