[package]
name = "devstack-supervisor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "devstack_supervisor"
path = "src/lib.rs"

[[bin]]
name = "devstack-supervisor"
path = "src/main.rs"

[dependencies]
devstack-core = { workspace = true }
devstack-config = { workspace = true }
devstack-executor = { workspace = true }
devstack-ipc = { workspace = true }
devstack-slot-allocator = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = { version = "0.3", features = ["sink"] }
portable-pty = { workspace = true }
reqwest = { workspace = true }
process_alive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-stream = "0.1"
