[package]
name = "devme-supervisor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "devme_supervisor"
path = "src/lib.rs"

[[bin]]
name = "devme-supervisor"
path = "src/main.rs"

[dependencies]
devme-core = { workspace = true }
devme-config = { workspace = true }
devme-ui = { workspace = true }
devme-executor = { workspace = true }
devme-ipc = { workspace = true }
devme-client = { workspace = true }
devme-slot-allocator = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = { version = "0.3", features = ["sink"] }
portable-pty = { workspace = true }
reqwest = { workspace = true }
process_alive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
crossterm = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
tokio-stream = "0.1"
