[package]
name = "devme-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "devme_tui"
path = "src/lib.rs"

[[bin]]
name = "devme-tui"
path = "src/main.rs"

[dependencies]
devme-core = { workspace = true }
devme-config = { workspace = true }
devme-client = { workspace = true }
devme-supervisor = { path = "../supervisor" }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
ansi-to-tui = { workspace = true }
notify = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
